[package]
name = "git-profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive"] }
dialoguer = "0.10.1"
directories = "4.0.1"
indexmap = { version = "1.9.1", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_with = { version = "1.14.0", features = ["indexmap"] }
thiserror = "1.0.31"
toml = "0.5.9"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
