[package]
name = "gitprofile"
version = "0.1.2"
edition = "2021"
description = "A CLI tool to manage git profiles"
repository = "https://github.com/takuma7/git-profile/"
readme = "README.md"
license-file = "LICENSE.md"
keywords = ["git", "git-config", "git-profile", "productivity"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.25", features = ["derive"] }
dialoguer = "0.10.4"
directories = "5.0.1"
indexmap = { version = "1.9.1", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.9.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_with = { version = "1.14.0", features = ["indexmap"] }
thiserror = "1.0.31"
toml = "0.5.9"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.1"

[[bin]]
name = "git-profile"
path = "src/main.rs"
